fixed model bug and alignment bug

--- a/Components/Layout/LoginLayout.razor.css
+++ b/Components/Layout/LoginLayout.razor.css
@@ -102,3 +102,11 @@ input[type=number]::-webkit-inner-spin-button {
 .w-full {
 	width: 100%;
 }
+
+::deep .edit-form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
